--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=spring-Trello
+
+# mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql= true
+spring.datasource.url=jdbc:mysql://localhost:3306/trello
+spring.datasource.username=root
+spring.datasource.password=disquiet
+
+# sql detail
+spring.jpa.hibernate.ddl-auto = update
