git pull 하기 전 커밋

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.datasource.password=${mysql-password}
 
 # sql detail
 spring.jpa.hibernate.ddl-auto = update
+
+# file upload max size
+spring.servlet.multipart.max-file-size=5MB
+
+#file save channel
+file.dir=C:/test/
