- 링크드 노드 방식의 카드리스트 Entity 구현 - 카드리스트 생성 및 삭제 로직 구현 - 링크드 노드 순서 정보 기반 조회 로직 구현 - 링크드 노드 순서 변경 로직 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.datasource.username=root
 spring.datasource.password=disquiet
 
 # sql detail
-spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
