조건에 맞게 예외처리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.username=root
 spring.datasource.password=${mysql-password}
 
 # sql detail
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 jwt.secret.key=${secret-key}
 
 
