--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,4 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.servlet.multipart.max-file-size=5MB
 
 #file save channel
-file.dir=C:/test/
+file.dir=${file-channel}
