--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 spring.application.name=spring-Trello
 
+# mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
-
-spring.datasource.url=${mysql-url}
-spring.datasource.username=${mysql-username}
-spring.datasource.password=${mysql-password}
+spring.datasource.url=jdbc:mysql://localhost:3306/trello
+spring.datasource.username=root
+spring.datasource.password=disquiet
 
 # sql detail
-spring.jpa.hibernate.ddl-auto = update
-jwt.secret.key=${secret-key}
+#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
+jwt.secret.key=lkwifw9fkw09wk201l12m1lfjeoikwowl2liilweikf
 
 
 spring.jpa.properties.hibernate.show_sql=true
