- 카드에 체크박스 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.datasource.username=root
 spring.datasource.password=disquiet
 
 # sql detail
-#spring.jpa.hibernate.ddl-auto = update
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = create-drop
 jwt.secret.key=lkwifw9fkw09wk201l12m1lfjeoikwowl2liilweikf
 
 
@@ -22,4 +22,4 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.servlet.multipart.max-file-size=5MB
 
 #file save channel
-file.dir=C:/test/
+file.dir=/Users/disquiet/Desktop/test
