--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 
 spring.datasource.url=${mysql-url}
-spring.datasource.username=${mysql-username}
+spring.datasource.username=root
 spring.datasource.password=${mysql-password}
 
 # sql detail
