--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=${mysql-password}
 
 # sql detail
 spring.jpa.hibernate.ddl-auto = update
-jwt.secret.key=${secret.key}
+jwt.secret.key=${secret-key}
 
 
 spring.jpa.properties.hibernate.show_sql=true
