--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,17 @@
 spring.application.name=spring-Trello
 
-# mysql
+server.port=8081
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
+
 spring.datasource.url=${mysql-url}
-spring.datasource.username=root
+spring.datasource.username=${mysql-username}
 spring.datasource.password=${mysql-password}
 
 # sql detail
 spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.hibernate.ddl-auto = create-drop
-jwt.secret.key=lkwifw9fkw09wk201l12m1lfjeoikwowl2liilweikf
+jwt.secret.key=${secret-key}
 
 
 spring.jpa.properties.hibernate.show_sql=true
