- comment 이모지 기능 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 spring.datasource.url=jdbc:mysql://localhost:3306/trello
 spring.datasource.username=root
-spring.datasource.password=disquiet
+spring.datasource.password=k32915555
 
 # sql detail
 spring.jpa.hibernate.ddl-auto = update
@@ -22,5 +22,7 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.servlet.multipart.max-file-size=5MB
 
 #file save channel
-file.dir=/Users/disquiet/Desktop/test
+file.dir=/Users/t2023-m0100/Desktop/img
 
+spring.jpa.properties.hibernate.connection.characterEncoding=utf-8
+spring.jpa.properties.hibernate.connection.useUnicode=true
